// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with description and no title 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1ljheyq-MuiPaper-root"
    form="[object Object]"
  >
    <ul
      class="MuiList-root MuiList-dense css-f9sb8f-MuiList-root"
      form="[object Object]"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-1kunsst-MuiListItem-root"
        form="[object Object]"
      >
        <div
          class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
        >
          <span
            aria-hidden="true"
            class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeSmall css-1yybaem-MuiIcon-root"
          >
            view_carousel
          </span>
        </div>
        <div
          class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap MuiListItemText-secondary css-tu5i67-MuiTypography-root"
          >
            title
          </span>
        </div>
      </li>
    </ul>
    <div
      class="MuiBox-root css-qwzpdj"
      form="[object Object]"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 css-1mfchec-MuiPaper-root"
        form="[object Object]"
      >
        <ul
          class="MuiList-root MuiList-dense css-uz2fu2-MuiList-root"
          form="[object Object]"
        >
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-button css-163vsy0-MuiButtonBase-root-MuiListItem-root"
            form="[object Object]"
            parent="[object Object]"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
            >
              <span
                aria-hidden="true"
                class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-kp9ftd-MuiIcon-root"
              >
                dynamic_form
              </span>
            </div>
            <div
              class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
            />
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </ul>
      </div>
      <div
        class="MuiBox-root css-mbccmm"
        form="[object Object]"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 makeStyles-root-17 makeStyles-horizontal-19 css-ee20y-MuiPaper-root"
          form="[object Object]"
          parent="[object Object]"
        >
          Test Panel
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders with form options layout horizontal 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1ljheyq-MuiPaper-root"
    form="[object Object]"
  >
    <ul
      class="MuiList-root MuiList-dense css-f9sb8f-MuiList-root"
      form="[object Object]"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-i4riy3-MuiListItem-root"
        form="[object Object]"
      >
        <div
          class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
        >
          <span
            aria-hidden="true"
            class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeSmall css-1yybaem-MuiIcon-root"
          >
            view_carousel
          </span>
        </div>
        <div
          class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-noWrap MuiListItemText-primary css-yrxn77-MuiTypography-root"
          >
            title
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap MuiListItemText-secondary css-tu5i67-MuiTypography-root"
          >
            description
          </span>
        </div>
      </li>
    </ul>
    <div
      class="MuiBox-root css-qwzpdj"
      form="[object Object]"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 css-tzftsp-MuiPaper-root"
        form="[object Object]"
      >
        <ul
          class="MuiList-root MuiList-dense css-wvy7ui-MuiList-root"
          form="[object Object]"
        >
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-button css-163vsy0-MuiButtonBase-root-MuiListItem-root"
            form="[object Object]"
            parent="[object Object]"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
            >
              <span
                aria-hidden="true"
                class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-kp9ftd-MuiIcon-root"
              >
                dynamic_form
              </span>
            </div>
            <div
              class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
            />
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </ul>
      </div>
      <div
        class="MuiBox-root css-169sr6u"
        form="[object Object]"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 makeStyles-root-1 makeStyles-horizontal-3 css-ee20y-MuiPaper-root"
          form="[object Object]"
          parent="[object Object]"
        >
          Test Panel
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders with form options layout vertical 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1ljheyq-MuiPaper-root"
    form="[object Object]"
  >
    <ul
      class="MuiList-root MuiList-dense css-f9sb8f-MuiList-root"
      form="[object Object]"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-1kunsst-MuiListItem-root"
        form="[object Object]"
      >
        <div
          class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
        >
          <span
            aria-hidden="true"
            class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeSmall css-1yybaem-MuiIcon-root"
          >
            view_carousel
          </span>
        </div>
        <div
          class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-noWrap MuiListItemText-primary css-yrxn77-MuiTypography-root"
          >
            title
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap MuiListItemText-secondary css-tu5i67-MuiTypography-root"
          >
            description
          </span>
        </div>
      </li>
    </ul>
    <div
      class="MuiBox-root css-qwzpdj"
      form="[object Object]"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 css-1mfchec-MuiPaper-root"
        form="[object Object]"
      >
        <ul
          class="MuiList-root MuiList-dense css-uz2fu2-MuiList-root"
          form="[object Object]"
        >
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-button css-163vsy0-MuiButtonBase-root-MuiListItem-root"
            form="[object Object]"
            parent="[object Object]"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
            >
              <span
                aria-hidden="true"
                class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-kp9ftd-MuiIcon-root"
              >
                dynamic_form
              </span>
            </div>
            <div
              class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
            />
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </ul>
      </div>
      <div
        class="MuiBox-root css-mbccmm"
        form="[object Object]"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 makeStyles-root-5 makeStyles-horizontal-7 css-ee20y-MuiPaper-root"
          form="[object Object]"
          parent="[object Object]"
        >
          Test Panel
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders with no title or description 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1ljheyq-MuiPaper-root"
    form="[object Object]"
  >
    <div
      class="MuiBox-root css-qwzpdj"
      form="[object Object]"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 css-1mfchec-MuiPaper-root"
        form="[object Object]"
      >
        <ul
          class="MuiList-root MuiList-dense css-uz2fu2-MuiList-root"
          form="[object Object]"
        >
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-button css-163vsy0-MuiButtonBase-root-MuiListItem-root"
            form="[object Object]"
            parent="[object Object]"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
            >
              <span
                aria-hidden="true"
                class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-kp9ftd-MuiIcon-root"
              >
                dynamic_form
              </span>
            </div>
            <div
              class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
            />
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </ul>
      </div>
      <div
        class="MuiBox-root css-mbccmm"
        form="[object Object]"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 makeStyles-root-21 makeStyles-horizontal-23 css-ee20y-MuiPaper-root"
          form="[object Object]"
          parent="[object Object]"
        >
          Test Panel
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders with title and description 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1ljheyq-MuiPaper-root"
    form="[object Object]"
  >
    <ul
      class="MuiList-root MuiList-dense css-f9sb8f-MuiList-root"
      form="[object Object]"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-1kunsst-MuiListItem-root"
        form="[object Object]"
      >
        <div
          class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
        >
          <span
            aria-hidden="true"
            class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeSmall css-1yybaem-MuiIcon-root"
          >
            view_carousel
          </span>
        </div>
        <div
          class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-noWrap MuiListItemText-primary css-yrxn77-MuiTypography-root"
          >
            title
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap MuiListItemText-secondary css-tu5i67-MuiTypography-root"
          >
            description
          </span>
        </div>
      </li>
    </ul>
    <div
      class="MuiBox-root css-qwzpdj"
      form="[object Object]"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 css-1mfchec-MuiPaper-root"
        form="[object Object]"
      >
        <ul
          class="MuiList-root MuiList-dense css-uz2fu2-MuiList-root"
          form="[object Object]"
        >
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-button css-163vsy0-MuiButtonBase-root-MuiListItem-root"
            form="[object Object]"
            parent="[object Object]"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
            >
              <span
                aria-hidden="true"
                class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-kp9ftd-MuiIcon-root"
              >
                dynamic_form
              </span>
            </div>
            <div
              class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
            />
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </ul>
      </div>
      <div
        class="MuiBox-root css-mbccmm"
        form="[object Object]"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 makeStyles-root-9 makeStyles-horizontal-11 css-ee20y-MuiPaper-root"
          form="[object Object]"
          parent="[object Object]"
        >
          Test Panel
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders with title and no description 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1ljheyq-MuiPaper-root"
    form="[object Object]"
  >
    <ul
      class="MuiList-root MuiList-dense css-f9sb8f-MuiList-root"
      form="[object Object]"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-1kunsst-MuiListItem-root"
        form="[object Object]"
      >
        <div
          class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
        >
          <span
            aria-hidden="true"
            class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeSmall css-1yybaem-MuiIcon-root"
          >
            view_carousel
          </span>
        </div>
        <div
          class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-noWrap MuiListItemText-primary css-yrxn77-MuiTypography-root"
          >
            title
          </span>
        </div>
      </li>
    </ul>
    <div
      class="MuiBox-root css-qwzpdj"
      form="[object Object]"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 css-1mfchec-MuiPaper-root"
        form="[object Object]"
      >
        <ul
          class="MuiList-root MuiList-dense css-uz2fu2-MuiList-root"
          form="[object Object]"
        >
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-button css-163vsy0-MuiButtonBase-root-MuiListItem-root"
            form="[object Object]"
            parent="[object Object]"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
            >
              <span
                aria-hidden="true"
                class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-kp9ftd-MuiIcon-root"
              >
                dynamic_form
              </span>
            </div>
            <div
              class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
            />
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </ul>
      </div>
      <div
        class="MuiBox-root css-mbccmm"
        form="[object Object]"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 makeStyles-root-13 makeStyles-horizontal-15 css-ee20y-MuiPaper-root"
          form="[object Object]"
          parent="[object Object]"
        >
          Test Panel
        </div>
      </div>
    </div>
  </div>
</div>
`;
